# swappy

./: .clang-format  .clang-tidy  .commitlintrc.yml  .gitignore  .versionrc  CHANGELOG.md  Cargo.toml  Dockerfile.ubuntu  LICENSE  README.md  application.c  build.rs  main.c  me.jtheoof.swappy.metainfo.xml  meson.build  meson_options.txt  notification.c  package.json  swappy.1.scd  swappy.ui  wayland.c
.github/workflows/: build.yml  lint.yml  main.yml
build-aux/: cargo.sh
example/: config
include/: algebra.h  application.h  box.h  buffer.h  clipboard.h  config.h  draw.h  file.h  keyboard.h  notification.h  ocr.h  paint.h  pixbuf.h  render.h  screencopy.h  swappy.h  util.h  wayland.h
protocol/: meson.build
res/: meson.build  swappy.glade  swappy.gresource.xml  swappy.ui
res/style/: popover.css  swappy.css
script/: bump-cargo.js  bump-meson-build.js  github-release  sign-post-release
src/: algebra.c  application.c  box.c  buffer.c  clipboard.c  config.c  config.rs  constant.rs.in  draw.c  file.c  keyboard.c  main.c  main.rs  meson.build  notification.c  ocr.c  paint.c  paint.rs  pixbuf.c  render.c  screencopy.c  swappy_gtk.rs  util.c  wayland.c
src/po/: LINGUAS  POTFILES  de.po  en.po  fr.po  ka.po  meson.build  nl.po  pt_BR.po  swappy.desktop.in  swappy.pot  tr.po  zh_CN.po
src/ui/: swappy.gresource.xml  swappy.ui
src/ui/style/: swappy.css
